--- a/ptuCalibration/CMakeLists.txt
+++ b/ptuCalibration/CMakeLists.txt
@@ -1,12 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 project(ptuCalibration)
 
-IF(CMAKE_COMPILER_IS_GNUCC)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-ELSE()
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-ENDIF()
-
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR}/../cameraSurveyingWithAprilTags/cameraSurveyingWithAprilTags/include/
                     ${CMAKE_CURRENT_SOURCE_DIR}/../cameraSurveyingWithAprilTags/fast_mit_apriltags/
@@ -23,3 +17,7 @@ target_link_libraries(${PROJECT_NAME}
                         apriltags
                         ${OpenCV_LIBS}
                         ${Boost_LIBRARIES})
+
+
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
