--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ link_directories(${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 add_subdirectory(multi_dof_kinematic_calibration)
+add_subdirectory(visual_marker_mapping)
