--- a/multi_dof_kinematic_calibration/CMakeLists.txt
+++ b/multi_dof_kinematic_calibration/CMakeLists.txt
@@ -2,13 +2,12 @@ cmake_minimum_required (VERSION 2.6)
 project(multi_dof_kinematic_calibration)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
+                    ../visual_marker_mapping/visual_marker_mapping/include/
                     ${Boost_INCLUDE_DIRS})
-
 
 add_library(${PROJECT_NAME}
             src/PtuImageCapture.cpp
-            src/PtuCalibrationProject.cpp
-            src/PtuCalibration.cpp)
+            src/PtuCalibrationProject.cpp)
 
 target_link_libraries(${PROJECT_NAME}
                         camSurv
