--- a/multi_dof_kinematic_calibration/CMakeLists.txt
+++ b/multi_dof_kinematic_calibration/CMakeLists.txt
@@ -1,15 +1,19 @@
 cmake_minimum_required (VERSION 3.0)
 project(multi_dof_kinematic_calibration)
 
-if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang") # Works for Clang and AppleClang
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 endif()
 
 add_executable(${PROJECT_NAME}
-#               src/PtuImageCapture.cpp
                src/CalibrationFrameIO.cpp
                src/PtuCalibrationProject.cpp
-               src/main.cpp)
+               src/main.cpp
+               include/multi_dof_kinematic_calibration/CeresUtil.h
+               include/multi_dof_kinematic_calibration/PtuCalibrationProject.h
+               include/multi_dof_kinematic_calibration/CalibrationFrameIO.h)
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
