--- a/multi_dof_kinematic_calibration/CMakeLists.txt
+++ b/multi_dof_kinematic_calibration/CMakeLists.txt
@@ -13,7 +13,8 @@ add_executable(${PROJECT_NAME}
                src/main.cpp
                include/multi_dof_kinematic_calibration/CeresUtil.h
                include/multi_dof_kinematic_calibration/Calibrator.h
-               include/multi_dof_kinematic_calibration/CalibrationDataIO.h)
+               include/multi_dof_kinematic_calibration/CalibrationDataIO.h
+               include/multi_dof_kinematic_calibration/DebugVis.h)
 
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
