--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,14 @@ link_directories(${CMAKE_BINARY_DIR}/lib)
 # bin dir for executable targets
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+if(WIN32)
+add_definitions(-D_USE_MATH_DEFINES)
+add_definitions(-DBOOST_ALL_DYN_LINK)
+set(Boost_USE_STATIC_LIBS OFF )
+set(Boost_USE_MULTITHREADED ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+endif(WIN32)
+
 add_subdirectory(multi_dof_kinematic_calibration)
 add_subdirectory(visual_marker_mapping)
 
